--- a/index.html
+++ b/index.html
@@ -1,83 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Social Media Hub</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
-    <style>
-        /* * To use your own local fonts:
-         * 1. Create a 'fonts' folder in the same directory as this index.html file.
-         * 2. Place your font files (e.g., my-custom-font.woff2) inside the 'fonts' folder.
-         * 3. Uncomment and modify the @font-face rule below.
-         * 4. Change the font-family in the 'body' style rule to 'My Custom Font'.
-        */
-        /*
-        @font-face {
-            font-family: 'My Custom Font';
-            src: url('./fonts/my-custom-font.woff2') format('woff2');
-            font-weight: normal;
-            font-style: normal;
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Social Media Hub</title>
+
+  <!-- Tailwind CSS -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    // Enable class-based dark mode in Tailwind
+    tailwind.config = {
+      darkMode: 'class',
+    }
+  </script>
+
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+    }
+
+    /* TikTok embed in dark mode */
+    .dark .tiktok-embed {
+      background-color: #1f2937 !important; 
+      border: 1px solid #374151 !important; 
+      border-radius: 8px;
+    }
+  </style>
+
+  <!-- Theme toggle script -->
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const themeToggle = document.getElementById('theme-toggle');
+      const htmlElement = document.documentElement;
+
+      function setTheme(isDark) {
+        if (isDark) {
+          htmlElement.classList.add('dark');
+          localStorage.setItem('theme', 'dark');
+        } else {
+          htmlElement.classList.remove('dark');
+          localStorage.setItem('theme', 'light');
         }
-        */
-        body {
-            /* font-family: 'My Custom Font', sans-serif; */
-            font-family: 'Inter', sans-serif;
+        themeToggle.checked = isDark;
+      }
+
+      themeToggle.addEventListener('change', () => {
+        setTheme(themeToggle.checked);
+      });
+
+      window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', e => {
+        if (!('theme' in localStorage)) {
+          setTheme(e.matches);
         }
-        
-        /* Style for the TikTok embed in dark mode */
-        .dark .tiktok-embed {
-            background-color: #1f2937 !important; /* Dark gray background */
-            border: 1px solid #374151 !important; /* Lighter gray border */
-            border-radius: 8px; /* Rounded corners */
-        }
-    </style>
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const themeToggle = document.getElementById('theme-toggle');
-            const htmlElement = document.documentElement;
+      });
 
-            // Central function to set the theme, save the choice, and update the toggle
-            function setTheme(isDark) {
-                // Set the theme on the main <html> element
-                if (isDark) {
-                    htmlElement.classList.add('dark');
-                    localStorage.setItem('theme', 'dark'); // Save preference
-                } else {
-                    htmlElement.classList.remove('dark');
-                    localStorage.setItem('theme', 'light'); // Save preference
-                }
-                // Update the checkbox to match the current theme
-                themeToggle.checked = isDark;
-            }
-
-            // Listen for clicks on the toggle switch
-            themeToggle.addEventListener('change', () => {
-                setTheme(themeToggle.checked);
-            });
-
-            // Listen for changes in the operating system's theme preference
-            window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', e => {
-                // Only apply the system theme if the user hasn't manually set one
-                if (!('theme' in localStorage)) {
-                    setTheme(e.matches);
-                }
-            });
-
-            // --- Set Initial Theme on Page Load ---
-            const savedTheme = localStorage.getItem('theme');
-            if (savedTheme) {
-                // If a theme is saved in localStorage, use it
-                setTheme(savedTheme === 'dark');
-            } else {
-                // Otherwise, use the system's preferred theme
-                setTheme(window.matchMedia('(prefers-color-scheme: dark)').matches);
-            }
-        });
-    </script>
+      const savedTheme = localStorage.getItem('theme');
+      if (savedTheme) {
+        setTheme(savedTheme === 'dark');
+      } else {
+        setTheme(window.matchMedia('(prefers-color-scheme: dark)').matches);
+      }
+    });
+  </script>
 </head>
 <body class="bg-slate-100 dark:bg-gray-900 text-slate-800 dark:text-slate-200 transition-colors duration-300">
 
