--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 
                 <!-- YouTube Section -->
                 <div class="bg-white dark:bg-gray-800 p-6 rounded-2xl shadow-lg hover:shadow-xl transition-shadow duration-300 flex flex-col items-center text-center">
-                    <img src="https://yt3.ggpht.com/ytc/AIdro_k4m1zYy9P0Y6Z9E9w_Z5-Y5eF8V8k-j8g-4Z6a=s176-c-k-c0x00ffffff-no-rj-mo" 
+                    <img src="ytpfp.jpg" 
                          alt="YouTube Profile Picture" 
                          class="w-32 h-32 rounded-full border-4 border-slate-200 dark:border-gray-700 mb-4 shadow-md"
                          onerror="this.onerror=null;this.src='https://placehold.co/128x128/e2e8f0/334155?text=Cenk57';">
@@ -109,7 +109,7 @@
 
                 <!-- TikTok Section -->
                 <div class="bg-white dark:bg-gray-800 p-6 rounded-2xl shadow-lg hover:shadow-xl transition-shadow duration-300 flex flex-col items-center text-center">
-                    <img src="https://p16-sign-va.tiktokcdn.com/tos-maliva-avt-0068/7340645672323399686~c5_720x720.jpeg" 
+                    <img src="ttpfp.jpeg" 
                          alt="TikTok Profile Picture" 
                          class="w-32 h-32 rounded-full border-4 border-slate-200 dark:border-gray-700 mb-4 shadow-md"
                          onerror="this.onerror=null;this.src='https://placehold.co/128x128/e2e8f0/334155?text=basc';">
